# openceilidh

./: Main.hs  README.md  load.py  openceilidh.cabal  seata.json  template.mxml  tunes.json
seata/mxml/: Ashokan.musicxml  Auld Lang Syne.musicxml  Cashback.musicxml  Celestial.musicxml  Dingieshowe.musicxml  Morrison.musicxml  Ram.musicxml  Sergeant.musicxml  Sinners.musicxml  Waltz.musicxml
tunes/mscz/: Ash.musicxml  Ashokan Farewell.mscz  Atholl Highlanders.mscz  Auld Lang Syne.mscz  Black and White Binoculars.mscz  Burdland.mscz  Calum's Road.mscz  Catharsis.mscz  Celestial.mscz  Charles' Favourite.mscz  Cherish The Ladies.mscz  Ciarán - New MP3s.docx  Clare.mscz  Curious Beetle.mscz  Dashing White Sergeant.mscz  Donald MacLean's Farewell To Oban.mscz  Donald MacLean_s Farewell To Oban.mscz  Double-Header.mscz  Irene_s Reel.mscz  Irish Washerwoman.mscz  L_Air Mignonne.mscz  Lisnagun.mscz  Miss Rowan Davies.mscz  Moo Moo Meadows.mscz  More Moo Moo Meadows.mscz  Morrison_s.mscz  Mrs MacLeod of Raasay.mscz  Mrs O_Sullivan_s.mscz  Roaring Barmaid.mscz  Scotland the Brave.mscz  Sea Tune - pt.2.mscz  Sinners.mscz  Skye Boat Song.mscz  Soldier's Joy.mscz  Spootiskerry.mscz  Tam Lin (Am).mscz  Tam Lin (Dm).mscz  Tell Me Ma.mscz  Tetris.mscz  That One.mscz  (+25 more)
tunes/mxml/: Ashokan Set.musicxml  Ashokan.musicxml  Auld Lang Syne.musicxml  Cashback Set.musicxml  Celestial Set.musicxml  Morrison's (ext.).musicxml  Thursday.musicxml  Waltz.musicxml
