cabal-version:      2.4
name:               openceilidh
version:            0.1.0.0
maintainer:         cmd1@hw.ac.uk


executable openceilidh-exe
  main-is:          Main.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends:    base, process, bytestring, base64-bytestring, either, text, aeson, conduit, xml-conduit, zip-conduit, conduit-extra, musicxml2
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
