cabal-version:      2.4
name:               openceilidh
version:            0.1.0.0
maintainer:         cmd1@hw.ac.uk


executable openceilidh-exe
  main-is:          Main.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends:    base, either, split, process, text, containers,
                    directory, filepath, aeson, aeson-pretty, bytestring, base64-bytestring,
                    zip-archive, conduit, xml-conduit
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
